# TSS

./: README.md
cggma-wasm/: Cargo.toml
cggma-wasm/examples/: key-2.json  key-3.json  package-lock.json  package.json  test.js  test2.js  test3.js
cggma-wasm/src/gg2020/: keygen.rs  sign.rs
enclave/: Dockerfile  build.sh  run.sh
service/: build.sh
service/Server-side/: Cargo.toml  Dockerfile  Dockerfile.enclave  build.sh  build_enclave.sh
service/Server-side Slicing/: Cargo.toml
service/Server-side Slicing/src/: keygen1.rs  main.rs  sign1.rs  tx.rs
service/Server-side/src/: client.rs  keygen1.rs  keyrecovery.rs  main.rs  sign1.rs  tx.rs  utils.rs
service/Servers/: Cargo.toml  Dockerfile  Dockerfile.enclave  Rocket.toml  build.sh  build_enclave.sh  rust-toolchain.toml
service/Servers/src/: main.rs
tss-wasm/: Cargo.toml  Dockerfile  build.sh
tss-wasm/examples/: Dockerfile  build.sh  client-keygen copy.js  client-keygen.js  client-sign-btc.js  client-sign-message.js  client-sign-tx.js  key-2.json  key-3.json  main.js  package-lock.json  package.json  test.js  testTime.js
tss-wasm/pkg/: cggmp_wasm.d.ts  cggmp_wasm.js  cggmp_wasm_bg.js  cggmp_wasm_bg.wasm  cggmp_wasm_bg.wasm.d.ts  package.json
tss-wasm/src/: utils.rs
tss-wasm/src/gg2020/: keygen.rs  sign.rs
