[package]
name = "side-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["cdylib","rlib"]




[dependencies]
rand = "0.8.4"
redis = "0.23.0"
anyhow="1.0.51"
curv-kzen = { version = "0.10", default-features = false }
structopt="0.3.23"
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
tokio = { version = "1",features = ["full"] }
async-sse="5.1.0"
futures="0.3.18"
serde = { version = "1.0", features = ["derive"] }
surf="2.3.1"
serde_json="1.0.70"
hex = "0.4.3"
rlp="0.5.2"
web3="0.18.0"
base64 = "0.13.0"
reqwest="0.11.16"
sha3 = "0.10"
[dependencies.rust-crypto]
version = "0.2"
default-features = false

[dependencies.round-based]
git = "https://github.com/Leo-Li009/round-based-protocol.git"
features = ["dev"]

[dependencies.multi-party-ecdsa]
git = "https://github.com/Leo-Li009/multi-party-ecdsa.git"
default-features = false
[features]
default = ["curv-kzen/rust-gmp-kzen"]