[package]
name = "test2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [features]
# default = ["rust-gmp-kzen"]
# rust-gmp-kzen = ["fs-dkr/rust-gmp-kzen"]
# num-bigint = ["fs-dkr/num-bigint"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html




[dependencies]

curv-kzen = { version = "0.10", default-features = false }

structopt="0.3.23"
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
rand_chacha = "0.3.1"
rand = "0.8.5"
tokio = { version = "1",features = ["full"] }
cggmp-threshold-ecdsa={ git = "https://github.com/webb-tools/cggmp-threshold-ecdsa.git",default-features = false }
futures="0.3.18"
serde="1.0.130"



[dependencies.multi-party-ecdsa]
git = "https://github.com/webb-tools/multi-party-ecdsa"
default-features = false



# [dev-dependencies]
# criterion = "0.3"
# aes-gcm = "0.9.4"
# hex = "0.4"
# tokio = { version = "1", default-features = false, features = ["macros"] }
# futures = "0.3"
# rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
# reqwest = { version = "0.9", default-features = false }
# uuid = { version = "0.8", features = ["v4"] }
# serde_json = "1.0"
# rand = "0.8"
# anyhow = "1"
# structopt = "0.3"
# secp256k1 = { version = "0.20", features = ["global-context"]}

# thiserror = "1.0.23"
# round-based = { version = "0.1.4", features = ["dev"] }








#fs-dkr = { git = "https://github.com/webb-tools/fs-dkr", default-features = false }
#cggmp-threshold-ecdsa={ git = "https://github.com/webb-tools/cggmp-threshold-ecdsa.git" }
#multi-party-ecdsa = { git = "https://github.com/webb-tools/multi-party-ecdsa.git" }
# multi-party-ecdsa = { git = "https://github.com/ZenGo-X/multi-party-ecdsa.git"}