[package]
name = "servers"
version = "0.1.0"
edition = "2021"


[dependencies]
redis = "0.23.0"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
curv-kzen = { version = "0.10", default-features = false }
reqwest="0.11.16"
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
tokio = { version = "1",features = ["full"] }
futures="0.3.18"
serde="1.0.130"
rust-crypto="0.2.36"
crypto='0.5.0'